# insdownload-selfhosted

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  browser_worker.py  config.example.toml  download_douyin.py  download_douyin_profile.py  download_instagram.py  download_instagram_curl.py  download_instagram_gallery.py  download_xiaohongshu.py  input_parsing.py  output_layout.py  pyproject.toml
.github/: pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
app/: __init__.py  config.py  db.py  jobs.py  models.py  server.py
app/static/: app.css
app/templates/: base.html  index.html  settings.html  task.html
docs/: OPEN_SOURCE_PREP.md
docs/releases/: v0.1.0.md
scripts/: bootstrap_mac.sh  run_local.sh
