[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insdownload-selfhosted"
version = "0.1.0"
description = "macOS-first local self-hosted downloader UI for Instagram, Douyin, and Xiaohongshu."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "browser-cookie3>=0.20,<1.0",
  "chompjs>=1.3,<2.0",
  "fastapi>=0.115,<1.0",
  "gallery-dl>=1.30,<2.0",
  "instaloader>=4.14,<5.0",
  "jinja2>=3.1,<4.0",
  "pycryptodome>=3.21,<4.0",
  "requests>=2.32,<3.0",
  "uvicorn>=0.30,<1.0",
  "websocket-client>=1.8,<2.0",
  "xhshow>=0.1.9,<0.2",
  "yt-dlp>=2026.3.20",
]

[project.scripts]
insdownload-web = "app.server:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app", "app.*"]

[tool.setuptools.package-data]
app = ["templates/*.html", "static/*"]
